--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost/my_mvc_demo?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
 spring.jpa.hibernate.ddl-auto=update
+server.port=8443
 
-
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/khpi_olympiad.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=khpi_olympiad
+server.ssl.key-store-password=khpi_olympiad
