--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost/my_mvc_demo
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
-server.port=8443
-server.ssl.enabled=true
+server.port=8085
+server.ssl.enabled=false
 server.ssl.key-store=src/main/resources/khpi_olympiad.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=khpi_olympiad
