add entity subscription

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost/my_mvc_demo?serverTimezone=UTC&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&useUnicode=yes&characterEncoding=UTF-8}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost/my_mvc_demo?serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 server.port=8080
